<resources>
    <string name="app_name">Baradopta</string>
    <string name="facebook_application_id" translatable="false">487946478633511</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb487946478633511</string>
    <string name="default_notification_channel_id">CH_01</string>

    <string name="email">Email</string>
    <string name="contraseña">Contraseña</string>
    <string name="olvidaste_contraseña">¿Olvidaste tu contraseña?</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="iniciar_sesion_con_fb">Inicia con Facebook</string>
    <string name="registrate_login">¿No tenes cuenta? Registrate</string>
    <string name="iniciando_sesion">Iniciando sesión</string>
    <string name="aguarde">Aguarde unos segundos…</string>
    <string name="registro">Registro</string>
    <string name="confirmar_contraseña">Confirmar contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="numero_de_telefono">Número de telefono</string>
    <string name="telefono_message_registro">NO debe incluir espacios, ni guinones, el 0 ni la caracterista de nuestro pais(+54).</string>
    <string name="telefono_ej_registro">Ej: 3329001122 o 1133445566</string>
    <string name="registrate">Registrate</string>
    <string name="ingresa_el_email">Ingresa el email de tu cuenta</string>
    <string name="enviar">Enviar</string>
    <string name="description">Descripción</string>


    <!-- DOGS -->
    <string name="big">Grande</string>
    <string name="medium">Mediano</string>
    <string name="little">Pequeño</string>

    <string name="choose_app_share_dog">Eliga el medio donde quiera compartir a este perro</string>

    <!-- Errores -->
    <string name="error_permisos_storage">Se necesitan permisos del almacenamiento para seguir</string>
    <string name="invalid_email">Debe ingresar un email valido</string>
    <string name="invalid_number">Debe ingresar un número valido</string>
</resources>
