<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginView"
    android:background="@color/divider">



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/icons"
            android:textSize="40dp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_edit_text_usuario"
                android:layout_width="match_parent"
                android:layout_height="40dp"

                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/custom_edit_text_white"
                android:drawableStart="@drawable/custom_start_edit_text_usuario"
                android:hint="@string/email"
                android:textColorHint="@color/background"
                android:textColor="@color/primary_text"
                android:inputType="textEmailAddress"
                android:autofillHints="email" />

            <EditText
                android:id="@+id/login_edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"

                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/custom_edit_text_white"
                android:drawableStart="@drawable/custom_start_edit_text_password"
                android:hint="@string/contraseña"
                android:textColorHint="@color/background"
                android:inputType="textPassword"
                android:textColor="@color/primary_text"
                android:nextFocusDown="@id/login_button_iniciar_sesion"
                android:autofillHints="password" />

            <TextView
                android:id="@+id/text_view_login_olvidaste_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/olvidaste_contraseña"
                android:textColor="#9fff"
                android:textStyle="italic" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/login_button_iniciar_sesion"

                android:layout_width="match_parent"
                android:layout_height="50dp"


                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"

                android:background="@drawable/custom_button_purple"

                android:text="@string/iniciar_sesion"
                android:textColor="@color/icons"
                android:textStyle="bold" />

            <Button
                android:id="@+id/login_button_registrate"

                android:layout_width="match_parent"
                android:layout_height="50dp"


                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"

                android:background="@drawable/custom_button_pink"

                android:text="@string/registrate"
                android:textColor="@color/icons"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_fb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/login_button_registrate_facebook"

                    android:layout_width="match_parent"
                    android:layout_height="50dp"


                    android:layout_marginTop="5dp"

                    android:background="@drawable/custom_buttom_facebook"
                    android:drawableStart="@drawable/custom_start_button_facebook"
                    android:gravity="center|start"

                    android:text="@string/iniciar_sesion_con_fb"
                    android:textAlignment="center"
                    android:paddingEnd="32dp"
                    android:textColor="@color/icons"
                    android:textStyle="bold" />
            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>